--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,14 @@ rust-version = "1.81"
 [dependencies]
 anyhow = "1.0.95"
 blake3 = "1.5.5"
-derive_more = { version = "1.0.0", features = ["debug", "display"] }
-ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
+derive_more = { version = "2.0.1", features = ["debug", "display"] }
+ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde", "rand_core"] }
 hex = "0.4.3"
 postcard = { version = "1.1.1", features = ["use-std"] }
-rand = "0.8.5"
+rand = "0.9.2"
 serde = { version = "1.0.217", features = ["derive"] }
 
 [dev-dependencies]
 bitfields = "0.12.4"
-rand_chacha = "0.3.1"
+rand_chacha = "0.9"
 testresult = "0.4.1"
