--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ blake3 = "1.5.5"
 derive_more = { version = "2.0.1", features = ["debug", "display"] }
 ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde", "rand_core"] }
 hex = "0.4.3"
+n0-future = "0.3.0"
 postcard = { version = "1.1.1", features = ["use-std"] }
-rand = "0.9.2"
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
 serde = { version = "1.0.217", features = ["derive"] }
 
 [dev-dependencies]
