--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,13 @@ ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde", "rand_core"] }
 hex = "0.4.3"
 n0-future = "0.3.0"
 postcard = { version = "1.1.1", features = ["use-std"] }
-getrandom = { version = "0.3.2", features = ["wasm_js"] }
 serde = { version = "1.0.217", features = ["derive"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+rand = "0.9.2"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
 
 [dev-dependencies]
 bitfields = "0.12.4"
