chore(ci): remove docs builds in ci

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 description = "Really simple user Controlled Authorization Networks"
 license = "MIT OR Apache-2.0"
 authors = ["dignifiedquire <me@dignifiedquire.com>"]
-repository = "https://github.com/dignifiedquire/rcan"
+repository = "https://github.com/n0-computer/rcan"
 
 rust-version = "1.81"
 
